@@ -3,7 +3,9 @@ package io.github.some_example_name.controller;
 import com.badlogic.gdx.Gdx;
 import com.badlogic.gdx.Input;
 import com.badlogic.gdx.graphics.OrthographicCamera;
+import com.badlogic.gdx.graphics.g2d.Animation;
 import com.badlogic.gdx.graphics.g2d.Sprite;
+import com.badlogic.gdx.graphics.g2d.TextureRegion;
 import com.badlogic.gdx.math.Vector2;
 import com.badlogic.gdx.math.Vector3;
 import com.badlogic.gdx.utils.Timer;
@@ -11,6 +13,7 @@ import io.github.some_example_name.MainGradle;
 import io.github.some_example_name.model.*;
 import io.github.some_example_name.model.animal.Animal;
 import io.github.some_example_name.model.craft.Craft;
+import io.github.some_example_name.model.dto.SpriteComponent;
 import io.github.some_example_name.model.dto.SpriteHolder;
 import io.github.some_example_name.model.products.TreesAndFruitsAndSeeds.Tree;
 import io.github.some_example_name.model.records.Response;
@@ -19,6 +22,7 @@ import io.github.some_example_name.model.relations.NPCHouse;
 import io.github.some_example_name.model.relations.Player;
 import io.github.some_example_name.model.shelter.FarmBuilding;
 import io.github.some_example_name.model.source.Crop;
+import io.github.some_example_name.model.structure.Lightening;
 import io.github.some_example_name.model.structure.Structure;
 import io.github.some_example_name.model.structure.farmInitialElements.Lake;
 import io.github.some_example_name.model.structure.farmInitialElements.GreenHouse;
@@ -40,10 +44,13 @@ import java.util.Random;
 
 public class WorldController {
     private final GameNotifier notifier;
-    GameService gameService = new GameService();
-    ArrayList<SpriteContainer> rainDrops = new ArrayList<>();
-    ArrayList<SpriteContainer> storms = new ArrayList<>();
-    ArrayList<Sprite> snowDrops = new ArrayList<>();
+    private GameService gameService = new GameService();
+    private ArrayList<SpriteContainer> rainDrops = new ArrayList<>();
+    private ArrayList<SpriteContainer> storms = new ArrayList<>();
+    private ArrayList<Sprite> snowDrops = new ArrayList<>();
+    private SpriteHolder flower;
+    private SpriteHolder heart;
+    private Direction flowerDirection;
     float delta = 0f;
     private final OrthographicCamera camera = MainGradle.getInstance().getCamera();
 
@@ -63,9 +70,9 @@ public class WorldController {
         notifier = new GameNotifier(GameView.stage, GameAsset.SKIN);
     }
 
-    public void update() {
-        delta += Gdx.graphics.getDeltaTime();
-        printMap();
+    public void update(float delta) {
+        this.delta += delta;
+        printMap(delta);
         switch (App.getInstance().getCurrentGame().getVillage().getWeather()) {
             case SNOWY -> handleSnowDrops();
             case RAINY -> handleRainDrops();
@@ -141,6 +148,9 @@ public class WorldController {
 
     private void handleStorms() {
         Random rand = new Random();
+        if (rand.nextInt(2000) == 4) {
+            gameService.C_Thor("" + rand.nextInt(160), "" + rand.nextInt(120));
+        }
         if (!GameView.screenshotting && rand.nextInt(200) == 4) {
             Sprite sprite = new Sprite(GameAsset.STORM[rand.nextInt(0, 2)][rand.nextInt(0, 4)]);
             sprite.setPosition(
@@ -180,9 +190,11 @@ public class WorldController {
                 if (!greenHouse.isBuilt()) {
                     for (Tile tile : greenHouse.getTiles()) {
                         if (distanceFromClick(tile).isOrigin()) {
-                            Response resp = gameService.greenhouseBuild();
-                            if (!resp.shouldBeBack()) {
-                                showResponse(resp);
+                            if (Gdx.input.isButtonJustPressed(Input.Buttons.LEFT)) {
+                                Response resp = gameService.greenhouseBuild();
+                                if (!resp.shouldBeBack()) {
+                                    showResponse(resp);
+                                }
                             }
                         }
                     }
@@ -229,7 +241,7 @@ public class WorldController {
 
     private Farm currentFarm() {
         for (Farm farm : App.getInstance().getCurrentGame().getVillage().getFarms()) {
-            if (farm.getPlayers().get(0).equals(App.getInstance().getCurrentGame().getCurrentPlayer())) {
+            if (farm.getTiles().contains(App.getInstance().getCurrentGame().getCurrentPlayer().getTiles().getFirst())) {
                 return farm;
             }
         }
@@ -245,7 +257,42 @@ public class WorldController {
         return new Pair(mouseTileX - tile.getX(), mouseTileY - tile.getY());
     }
 
-    public void printMap() {
+    private void drawRawSprite(float delta, Sprite sprite, Structure structure) {
+
+        sprite.setPosition(structure.getTiles().get(0).getX() * App.tileWidth,
+            structure.getTiles().get(0).getY() * App.tileHeight);
+        int width = structure.getWidth() == null ? 1 : structure.getWidth();
+        int height = structure.getHeight() == null ? 1 : structure.getHeight();
+        sprite.setPosition((width/2f + structure.getTiles().getFirst().getX()) * App.tileWidth - sprite.getWidth()/2,
+            (height/2f + structure.getTiles().getFirst().getY()) * App.tileHeight - sprite.getHeight()/2 );
+        sprite.draw(MainGradle.getInstance().getBatch());
+        if (sprite instanceof AnimatedSprite animatedSprite) {
+            animatedSprite.update(delta);
+        }
+    }
+
+    private void drawSpriteHolder(float delta, SpriteHolder sprite, Structure structure) {
+        sprite.getSprite().setPosition(
+            (sprite.getOffset().getX() + structure.getTiles().getFirst().getX()) * App.tileWidth,
+            (sprite.getOffset().getY() + structure.getTiles().getFirst().getY()) * App.tileHeight);
+        sprite.getSprite().draw(MainGradle.getInstance().getBatch());
+        if (sprite.getSprite() instanceof AnimatedSprite animatedSprite) {
+            animatedSprite.update(delta);
+        }
+    }
+
+    private void drawSpriteComponent(float delta, SpriteComponent sprite, Structure structure) {
+        ArrayList<SpriteHolder> spriteHolders = structure.getSpriteComponent().getSprites(delta);
+        for (SpriteHolder spriteHolder : spriteHolders) {
+            spriteHolder.getSprite().setPosition(
+                (sprite.getOffset().getX() + spriteHolder.getOffset().getX() + structure.getTiles().getFirst().getX()) * App.tileWidth,
+                (sprite.getOffset().getY() + spriteHolder.getOffset().getY() + structure.getTiles().getFirst().getY()) * App.tileHeight
+            );
+            spriteHolder.getSprite().draw(MainGradle.getInstance().getBatch());
+        }
+    }
+
+    public void printMap(float delta) {
         Player player = App.getInstance().getCurrentGame().getCurrentPlayer();
         Game game = App.getInstance().getCurrentGame();
         Tile[][] tiles = game.tiles;
@@ -264,29 +311,15 @@ public class WorldController {
             for (Structure structure : farm.getStructures()) {
                 if (isStructureInBond(structure)) {
                     if (structure.getSprite() != null) {
-                        if (structure instanceof Lake) {
+                        if (structure instanceof Lake lake) {
                             for (Tile tile : structure.getTiles()) {
                                 structure.getSprite().setSize(App.tileWidth, App.tileHeight);
                                 structure.getSprite().setPosition(tile.getX() * App.tileWidth,
                                     tile.getY() * App.tileHeight);
                                 structure.getSprite().draw(MainGradle.getInstance().getBatch());
                             }
-                        } else if (structure instanceof GreenHouse greenHouse) {
-                            Sprite sprite = greenHouse.getSprite();
-                            sprite.setPosition(structure.getTiles().get(0).getX() * App.tileWidth,
-                                structure.getTiles().get(0).getY() * App.tileHeight);
-                            sprite.draw(MainGradle.getInstance().getBatch());
-                        } else if (structure instanceof Crop crop) {
-                            Sprite sprite = crop.getSprite();
-                            sprite.setPosition(structure.getTiles().get(0).getX() * App.tileWidth,
-                                structure.getTiles().get(0).getY() * App.tileHeight);
-                            sprite.draw(MainGradle.getInstance().getBatch());
-                        } else if (structure instanceof Tree tree) {
-                            Sprite sprite = tree.getSprite();
-                            sprite.setPosition(structure.getTiles().get(0).getX() * App.tileWidth,
-                                structure.getTiles().get(0).getY() * App.tileHeight);
-                            sprite.draw(MainGradle.getInstance().getBatch());
                         } else if (structure instanceof Animal animal) {
+
                             if (isAnimalBuildingCollision(farm.getStructures(), animal, player)) {
                                 structure.getSprite().setPosition(structure.getTiles().get(0).getX() * App.tileWidth,
                                     structure.getTiles().get(0).getY() * App.tileHeight);
@@ -296,30 +329,24 @@ public class WorldController {
                                     structure.getTiles().get(0).getY() * App.tileHeight);
                                 structure.getSprite().draw(MainGradle.getInstance().getBatch());
                             }
-                        } else if (structure instanceof FarmBuilding) {
-                            if (collision(player, (FarmBuilding) structure)) {
-                                Sprite sprite = ((FarmBuilding) structure).getSpriteInterior();
-                                sprite.setPosition(structure.getTiles().get(0).getX() * App.tileWidth,
-                                    structure.getTiles().get(0).getY() * App.tileHeight);
-                                sprite.draw(MainGradle.getInstance().getBatch());
+
+                        } else if (structure instanceof FarmBuilding farmBuilding) {
+                            if (collision(player, farmBuilding)) {
+                                drawRawSprite(delta, ((FarmBuilding) structure).getSpriteInterior(), structure);
                             } else {
-                                structure.getSprite().setPosition(structure.getTiles().get(0).getX() * App.tileWidth,
-                                    structure.getTiles().get(0).getY() * App.tileHeight);
-                                structure.getSprite().draw(MainGradle.getInstance().getBatch());
+                                drawRawSprite(delta, structure.getSprite(), structure);
                             }
                         } else {
-                            structure.getSprite().setPosition(structure.getTiles().get(0).getX() * App.tileWidth,
-                                structure.getTiles().get(0).getY() * App.tileHeight);
-                            structure.getSprite().draw(MainGradle.getInstance().getBatch());
+                            drawRawSprite(delta, structure.getSprite(), structure);
                         }
                     }
                     if (structure.getSprites() != null) {
                         for (SpriteHolder sprite : structure.getSprites()) {
-                            sprite.getSprite().setPosition(
-                                (sprite.getOffset().getX() + structure.getTiles().get(0).getX()) * App.tileWidth,
-                                (sprite.getOffset().getY() + structure.getTiles().get(0).getY()) * App.tileHeight);
-                            sprite.getSprite().draw(MainGradle.getInstance().getBatch());
+                            drawSpriteHolder(delta, sprite, structure);
                         }
+                    }
+                    if (structure.getSpriteComponent() != null) {
+                        drawSpriteComponent(delta, structure.getSpriteComponent(), structure);
                     }
                 }
             }
@@ -327,24 +354,34 @@ public class WorldController {
         for (Structure structure : App.getInstance().getCurrentGame().getVillage().getStructures()) {
             if (structure.getSprite() != null) {
                 if (structure instanceof NPC npc) {
+                    drawRawSprite(delta, structure.getSprite(), structure);
                     if (npc.isHaveDialog()) {
-                        npc.getSprite().setPosition(structure.getTiles().get(0).getX() * App.tileWidth,
-                            structure.getTiles().get(0).getY() * App.tileHeight);
-                        npc.getSprite().draw(MainGradle.getInstance().getBatch());
                         npc.getSpriteDialogBox().setPosition(structure.getTiles().get(0).getX() * App.tileWidth,
                             structure.getTiles().get(0).getY() * App.tileHeight + npc.getSprite().getHeight());
                         npc.getSpriteDialogBox().draw(MainGradle.getInstance().getBatch());
-                    } else {
-                        structure.getSprite().setPosition(structure.getTiles().get(0).getX() * App.tileWidth,
-                            structure.getTiles().get(0).getY() * App.tileHeight);
-                        structure.getSprite().draw(MainGradle.getInstance().getBatch());
                     }
                 } else {
-                    structure.getSprite().setPosition(structure.getTiles().get(0).getX() * App.tileWidth,
-                        structure.getTiles().get(0).getY() * App.tileHeight);
-                    structure.getSprite().draw(MainGradle.getInstance().getBatch());
+                    drawRawSprite(delta, structure.getSprite(), structure);
                 }
             }
+            if (structure.getSprites() != null) {
+                for (SpriteHolder sprite : structure.getSprites()) {
+                    drawSpriteHolder(delta, sprite, structure);
+                }
+            }
+            if (structure.getSpriteComponent() != null) {
+                drawSpriteComponent(delta, structure.getSpriteComponent(), structure);
+            }
+        }
+        if (flower != null) {
+            flower.getSprite().setX(flower.getSprite().getX() + flowerDirection.getXTransmit() * App.tileWidth * delta / 4);
+            flower.getSprite().setY(flower.getSprite().getY() + flowerDirection.getYTransmit() * App.tileHeight * delta / 4);
+            flower.getSprite().draw(MainGradle.getInstance().getBatch());
+        }
+        if (heart != null) {
+            heart.getSprite().setY(heart.getSprite().getY() + App.tileHeight * delta / 5);
+            heart.getSprite().draw(MainGradle.getInstance().getBatch());
+            ((AnimatedSprite) heart.getSprite()).update(delta);
         }
     }
 
@@ -371,5 +408,45 @@ public class WorldController {
             }
         }
         return false;
+    }
+
+    public void drawFlower(Direction direction) {
+        flower = new SpriteHolder(new AnimatedSprite(
+            new Animation<>(0.1f, new TextureRegion(GameAsset.FLOWER))), new Tuple<>(0.5f,0f));
+        flower.getSprite().setScale(0.4f);
+        ((AnimatedSprite) flower.getSprite()).setLooping(false);
+        Player player = App.getInstance().getCurrentGame().getCurrentPlayer();
+        flower.getSprite().setPosition(
+            (flower.getOffset().getX() + player.getTiles().get(0).getX()) * App.tileWidth,
+            (flower.getOffset().getY() + player.getTiles().get(0).getY()) * App.tileHeight);
+        flowerDirection = direction;
+        Timer.schedule(new Timer.Task() {
+            @Override
+            public void run() {
+                flower = null;
+            }
+        }, 2);
+    }
+
+    public void drawHeart() {
+        heart = new SpriteHolder(new AnimatedSprite(new Animation<>(0.15f, GameAsset.BEATING_HEARTS[0][4],
+            GameAsset.BEATING_HEARTS[0][3], GameAsset.BEATING_HEARTS[0][2], GameAsset.BEATING_HEARTS[0][1],
+            GameAsset.BEATING_HEARTS[0][0], GameAsset.BEATING_HEARTS[0][1], GameAsset.BEATING_HEARTS[0][2],
+            GameAsset.BEATING_HEARTS[0][3])), new Tuple<>(0f,0f));
+        heart.getSprite().setSize(App.tileWidth/2f, App.tileHeight/2f);
+        Animation<Float> scale = new Animation<>(0.1f, 0.3f, 0.4f, 0.4f, 0.5f, 0.6f, 0.7f, 0.8f, 0.9f, 1f);
+        ((AnimatedSprite) heart.getSprite()).setScaleAnimation(scale);
+        ((AnimatedSprite) heart.getSprite()).setScaleLooping(false);
+        ((AnimatedSprite) heart.getSprite()).setLooping(true);
+        Player player = App.getInstance().getCurrentGame().getCurrentPlayer();
+        heart.getSprite().setPosition(
+            (heart.getOffset().getX() + player.getTiles().get(0).getX()) * App.tileWidth,
+            (heart.getOffset().getY() + player.getTiles().get(0).getY()) * App.tileHeight);
+        Timer.schedule(new Timer.Task() {
+            @Override
+            public void run() {
+                heart = null;
+            }
+        }, 20);
     }
 }
